--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently 'npm run start --workspace=client' 'npm run start --workspace=back' "
+    "start:prod": "concurrently 'npm run start --workspace=client' 'npm run start --workspace=back' "
   },
   "author": "",
   "license": "ISC",
