--- a/package.json
+++ b/package.json
@@ -52,5 +52,9 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.0.0"
+  },
+  "engines": {
+    "node": "21.x",
+    "npm": "10.x"
   }
 }
